chore: make SBOM.exe multi-release (#177)
* chore: make SBOM.exe multi-release

* Add JDK 11 to workflow

* Revert "Add JDK 11 to workflow"

This reverts commit 8e8febed1546ba4e1f9cea07e1e280673e2be7e9.

* Fix serialization and deserialization